2010-06-11  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Updated extension icon
	* Set version to 0.1.2

2010-06-10  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Missing quote in IFRAME attribute
	* Fixed bug: Frontend website is loaded completely in IFRAME on failure
	* Set version to 0.1.1

2010-05-26  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Remover hardcoded object creation
	* Cleanup: Added missing XCLASS definitions
	* Set version to 0.1.0

2010-05-14  Oliver Hader  <oliver@typo3.org>

	* Added feature: Proper handling of request registration to ensure each request is only valid once
	* Cleanup: Fixed PHPdoc comments
	* Cleanup: Wrapped IFRAMEs with DIV
	* Fixed bug: IFRAMEs take space and are not really invisible

2010-05-13  Oliver Hader  <oliver@typo3.org>

	* Initial version