@@ -1,3 +1,7 @@
+2010-07-14  Oliver Hader  <oliver@typo3.org>
+
+	* Fixed bug: Pre-processing hook of becookies must be one of the first ones
+
 2010-06-11  Oliver Hader  <oliver@typo3.org>
 
 	* Cleanup: Updated extension icon
